fix: align ProjectContainer & ProjectList sidebar

--- a/src/features/projects/styles/ProjectDetails.module.scss
+++ b/src/features/projects/styles/ProjectDetails.module.scss
@@ -265,7 +265,7 @@
   .container {
     padding-top: 0px;
     width: fit-content;
-    padding-left: 24px;
+    padding-left: 14px;
     margin-top: 0px;
   }
 
@@ -276,6 +276,7 @@
   .projectContainer {
     margin-top: 0px;
     width: 360px;
+    margin: 10px;
     padding-bottom: 16px;
     min-height: calc(100vh - 100px);
     background-color: transparent;
